tests/ui/privacy/pub-priv-dep/reexport_from_priv.stderr
error: type `Shared` from private dependency 'shared' in public interface
  --> $DIR/reexport_from_priv.rs:11:1
   |
LL | pub fn leaks_priv() -> reexport::Shared {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/reexport_from_priv.rs:7:9
   |
LL | #![deny(exported_private_dependencies)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

